<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvTransactionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KHJIGYHJH9823023"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginBottom="8dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="22 Desember 2020 12:00"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvTransactionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GoFood"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_20_000"
        android:textSize="14sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvTransactionPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gopay"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        tools:ignore="HardcodedText" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/categoryCard"
        app:strokeWidth="0dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/blue_primary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"
        tools:ignore="HardcodedText" />
</LinearLayout>
