<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
          android:id="@+id/linearProgressBar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:indeterminate="true"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="32dp"
          android:layout_marginEnd="32dp"
          app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
          app:srcCompat="@drawable/ic_login" />

        <TextView
          android:id="@+id/titleTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="32dp"
          android:alpha="0"
          android:text="@string/title_login_page"
          android:textColor="@color/md_theme_scrim"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
          tools:alpha="100" />

        <TextView
          android:id="@+id/messageTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginEnd="32dp"
          android:alpha="0"
          android:text="@string/message_login_page"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/titleTextView"
          tools:alpha="100" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/googleSigninButton"
          style="@style/Widget.Material3.Button.OutlinedButton"
          android:layout_width="0dp"
          android:layout_height="64dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="32dp"
          android:alpha="0"
          android:text="@string/google_sign_in"
          android:textColor="@color/md_theme_primary"
          app:icon="@drawable/google_icon"
          app:iconGravity="start"
          app:iconPadding="8dp"
          app:iconTint="@null"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/messageTextView"
          tools:alpha="100" />

        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guidelineHorizontal"
          android:layout_width="wrap_content"
          android:layout_height="64dp"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintGuide_percent="0.70"
          app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guidelineHorizontal2"
          android:layout_width="wrap_content"
          android:layout_height="64dp"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintGuide_percent="0.1"
          app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>